cockroachlabs-preview-main/docs/v24.1/cockroachdb-feature-availability.mdx
---
title: "CockroachDB Feature Availability"
old_description: "Learn about the features available in preview and limited access in CockroachDB"
---

Some CockroachDB features are made available in phases prior to being launched in general availability (GA). This page defines the different levels of CockroachDB v24.1 feature availability and lists the features in each phase.

<Note>
This page outlines *feature availability*, which is separate from Cockroach Labs' [Release Support Policy](/docs/releases/release-support-policy) or [API Support Policy](/docs/v24.1/api-support-policy).
</Note>

## Feature availability phases

<table><thead><tr><th>Phase</th><th>Definition</th><th>Accessibility</th></tr></thead><tbody><tr><td>Private preview</td><td>Feature is available to select customers and not publicly documented.</td><td>Invite-only</td></tr><tr><td>Limited access</td><td>Feature is publicly documented but not yet available widely. This feature may have limitations and/or capabilities that may change or be added based on feedback, before being promoted to GA.</td><td>Opt-in<br/>Contact your Cockroach Labs account team.</td></tr><tr><td><a href="#features-in-preview">Preview</a></td><td>Feature is publicly available and documented. This feature may have limitations and/or capabilities that may change or be added based on feedback, before being promoted to GA.</td><td>Public</td></tr><tr><td>General availability (GA)</td><td>Feature is publicly available and documented.</td><td>Public</td></tr></tbody></table>

<Note>
Any feature made available in a phase prior to GA is provided without any warranties of any kind. Such features are not subject to any technical support or uptime availability commitments unless Cockroach Labs explicitly states otherwise in writing.
</Note>

## Features in limited access

<Note>
**The following features are in limited access** and are subject to change. To begin validating a limited access feature and share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc).
</Note>

### Export logs to Azure Monitor

[Exporting logs to Azure Monitor](/docs/cockroachcloud/export-logs-advanced?filters=azure-monitor-log-export) from your CockroachDB Advanced cluster hosted on Azure is in limited access. Once the export is configured, logs will flow from all nodes in all regions of your CockroachDB Advanced cluster to Azure Monitor. To express interest and try it out, contact [Support](https://support.cockroachlabs.com/hc).

### Export metrics to Azure Monitor

[Exporting Metrics to Azure Monitor](/docs/cockroachcloud/export-metrics-advanced?filters=azure-monitor-metrics-export) from a CockroachDB Advanced cluster hosted on Azure is in limited access. Once the export is configured, metrics will flow from all nodes in all regions of your CockroachDB Advanced cluster to your chosen cloud metrics sink. To express interest and try it out, contact [Support](https://support.cockroachlabs.com/hc).

## Features in preview

<Note>
**The following features are in preview** and are subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc).
</Note>

### Generic query plans

[Generic query plans](/docs/v24.1/cost-based-optimizer#query-plan-type) are generated and optimized once without considering specific placeholder values, and are not regenerated on subsequent executions, unless the plan becomes stale due to [schema changes](/docs/v24.1/online-schema-changes) or new [table statistics](/docs/v24.1/cost-based-optimizer#table-statistics) and must be re-optimized. This approach eliminates most of the query latency attributed to planning.

### CockroachDB Cloud Folders

[Organizing CockroachDB Cloud clusters using folders](/docs/cockroachcloud/folders) is in preview. Folders allow you to organize and manage access to your clusters according to your organization's requirements. For example, you can create top-level folders for each business unit in your organization, and within those folders, organize clusters by geographic location and then by level of maturity, such as production, staging, and testing.

### CockroachDB Standard

CockroachDB Standard is a new plan for CockroachDB Cloud clusters and is in [Preview](/docs/v25.4/cockroachdb-feature-availability#features-in-preview). Compute for CockroachDB Standard is pre-provisioned and storage is usage-based. You can easily switch a CockroachDB Basic cluster to CockroachDB Standard in place.

### Custom Metrics Chart page for CockroachDB Cloud clusters

The [**Custom Metrics Chart** page](/docs/cockroachcloud/custom-metrics-chart-page) for CockroachDB Cloud clusters allows you to create custom charts showing the time series data for an available metric or combination of metrics.

### Export metrics from CockroachDB Advanced clusters

[Exporting metrics from CockroachDB Advanced](/docs/cockroachcloud/export-metrics-advanced) to [Amazon CloudWatch](https://aws.amazon.com/cloudwatch) or [Datadog](https://www.datadoghq.com/) using the [Cloud API](/docs/cockroachcloud/cloud-api) is in preview. Once the export is configured, metrics will flow from all nodes in all regions of your CockroachDB Advanced cluster to your chosen cloud metrics sink.

[Exporting metrics from CockroachDB Advanced to Prometheus](/docs/cockroachcloud/export-metrics-advanced?filters=prometheus-metrics-export) using the [Cloud API](/docs/cockroachcloud/cloud-api) is in preview for clusters hosted on Azure. It is in general availability for clusters hosted on AWS and GCP.

<Note>
Exporting metrics to Azure Monitor is in limited access. Refer to [Export metrics to Azure Monitor](#export-metrics-to-azure-monitor).
</Note>

### Convert a schema from Oracle or Microsoft SQL Server

Using the [Migrations page](/docs/cockroachcloud/migrations-page) to convert a schema from Oracle or Microsoft SQL Server is in preview.

### Schema conversion summary report

The [schema-conversion summary report](/docs/cockroachcloud/migrations-page#summary-report) in the Migrations page is in preview. This report displays the results of the schema analysis and provides bulk actions you can apply to update the schema, is in preview.

### SQL Shell

The [SQL Shell](/docs/cockroachcloud/sql-shell) in the CockroachDB Cloud Console is in preview. The SQL Shell enables you to run [queries](/docs/v24.1/selection-queries) on your CockroachDB Cloud cluster directly from your browser.

### Log SQL Activity to Datadog

You can [log `sampled_query` and `sampled_transaction` events to Datadog](/docs/v24.1/log-sql-activity-to-datadog) for finer granularity and long-term retention of SQL activity, and to reduce the performance impacts of logging these events locally. The [`sampled_query` events](/docs/v24.1/eventlog#sampled_query) and the [`sampled_transaction` events](/docs/v24.1/eventlog#sampled_transaction) contain common SQL event and execution details for transactions, and statements.

CockroachDB supports a built-in integration with [Datadog](https://www.datadoghq.com/) which sends these events as logs via the [Datadog HTTP API](https://docs.datadoghq.com/api/latest/logs). This integration is the recommended path to achieve high throughput data ingestion, which will in turn provide more query and transaction events for greater workload observability.

### Role-based SQL audit logging

[Role-based SQL audit logging](/docs/v24.1/role-based-audit-logging) gives you detailed information about queries being executed against your system by specific users or roles. An event of type [`role_based_audit_event`](/docs/v24.1/eventlog#role_based_audit_event) is recorded when an executed query belongs to a user whose role membership corresponds to a role that is enabled to emit an audit log via the [`sql.log.user_audit` cluster setting](/docs/v24.1/cluster-settings#setting-sql-log-user-audit). The event is logged in the [`SENSITIVE_ACCESS`](/docs/v24.1/logging#sensitive_access) logging channel.

### Table-based SQL audit logging

With [table-based SQL audit logging](/docs/v24.1/sql-audit-logging) you can log all queries against a table to a file, for security purposes. For more information, see [`ALTER TABLE... EXPERIMENTAL_AUDIT`](/docs/v24.1/alter-table#experimental_audit).

```sql
> ALTER TABLE t EXPERIMENTAL_AUDIT SET READ WRITE;
```

### Show table fingerprints

Table fingerprints are used to compute an identification string of an entire table, for the purpose of gauging whether two tables have the same data. This is useful, for example, when restoring a table from backup.

Example:

```sql
> SHOW EXPERIMENTAL_FINGERPRINTS FROM TABLE t;
```

```text
 index_name |     fingerprint
------------+---------------------
 primary    | 1999042440040364641
(1 row)
```

### KV event tracing

Use session tracing (via [`SHOW TRACE FOR SESSION`](/docs/v24.1/show-trace)) to report the replicas of all KV events that occur during its execution.

Example:

```sql
> SET tracing = on;
> SELECT * from t;
> SET tracing = off;
> SHOW EXPERIMENTAL_REPLICA TRACE FOR SESSION;
```

```text
            timestamp             | node_id | store_id | replica_id
----------------------------------+---------+----------+------------
 2018-10-18 15:50:13.345879+00:00 |       3 |        3 |          7
 2018-10-18 15:50:20.628383+00:00 |       2 |        2 |         26
```

### Check for constraint violations with `SCRUB`

Checks the consistency of [`UNIQUE`](/docs/v24.1/unique) indexes, [`CHECK`](/docs/v24.1/check) constraints, and more. Partially implemented; see [cockroachdb/cockroach#10425](https://github.com/cockroachdb/cockroach/issues/10425) for details.

<Note>
This example uses the `users` table from our open-source, fictional peer-to-peer vehicle-sharing application, [MovR](/docs/v24.1/movr).
</Note>

```sql
>  EXPERIMENTAL SCRUB table movr.users;
```

```text
 job_uuid |        error_type        | database | table |                       primary_key                        |         timestamp         | repaired |                                                                                                                                                                         details
----------+--------------------------+----------+-------+----------------------------------------------------------+---------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
          | index_key_decoding_error | movr     | users | ('boston','0009eeb5-d779-4bf8-b1bd-8566533b105c')        | 2018-10-18 16:00:38.65916 | f        | {"error_message": "key ordering did not match datum ordering. IndexDescriptor=ASC", "index_name": "primary", "row_data": {"address": "e'06484 Christine Villages\\nGrantport, TN 01572'", "city": "'boston'", "credit_card": "'4634253150884'", "id": "'0009eeb5-d779-4bf8-b1bd-8566533b105c'", "name": "'Jessica Webb'"}}
          | index_key_decoding_error | movr     | users | ('los angeles','0001252c-fc16-4006-b6dc-c6b1a0fd1f5b')   | 2018-10-18 16:00:38.65916 | f        | {"error_message": "key ordering did not match datum ordering. IndexDescriptor=ASC", "index_name": "primary", "row_data": {"address": "e'91309 Warner Springs\\nLake Danielmouth, PR 33400'", "city": "'los angeles'", "credit_card": "'3584736360686445'", "id": "'0001252c-fc16-4006-b6dc-c6b1a0fd1f5b'", "name": "'Rebecca Gibson'"}}
          | index_key_decoding_error | movr     | users | ('new york','000169a5-e337-4441-b664-dae63e682980')      | 2018-10-18 16:00:38.65916 | f        | {"error_message": "key ordering did not match datum ordering. IndexDescriptor=ASC", "index_name": "primary", "row_data": {"address": "e'0787 Christopher Highway Apt. 363\\nHamptonmouth, TX 91864-2620'", "city": "'new york'", "credit_card": "'4578562547256688'", "id": "'000169a5-e337-4441-b664-dae63e682980'", "name": "'Christopher Johnson'"}}
          | index_key_decoding_error | movr     | users | ('paris','00089fc4-e5b1-48f6-9f0b-409905f228c4')         | 2018-10-18 16:00:38.65916 | f        | {"error_message": "key ordering did not match datum ordering. IndexDescriptor=ASC", "index_name": "primary", "row_data": {"address": "e'46735 Martin Summit\\nMichaelview, OH 10906-5889'", "city": "'paris'", "credit_card": "'5102207609888778'", "id": "'00089fc4-e5b1-48f6-9f0b-409905f228c4'", "name": "'Nicole Fuller'"}}
          | index_key_decoding_error | movr     | users | ('rome','000209fc-69a1-4dd5-8053-3b5e5769876d')          | 2018-10-18 16:00:38.65916 | f        | {"error_message": "key ordering did not match datum ordering. IndexDescriptor=ASC", "index_name": "primary", "row_data": {"address": "e'473 Barrera Vista Apt. 890\\nYeseniaburgh, CO 78087'", "city": "'rome'", "credit_card": "'3534605564661093'", "id": "'000209fc-69a1-4dd5-8053-3b5e5769876d'", "name": "'Sheryl Shea'"}}
          | index_key_decoding_error | movr     | users | ('san francisco','00058767-1e83-4e18-999f-13b5a74d7225') | 2018-10-18 16:00:38.65916 | f        | {"error_message": "key ordering did not match datum ordering. IndexDescriptor=ASC", "index_name": "primary", "row_data": {"address": "e'5664 Acevedo Drive Suite 829\\nHernandezview, MI 13516'", "city": "'san francisco'", "credit_card": "'376185496850202'", "id": "'00058767-1e83-4e18-999f-13b5a74d7225'", "name": "'Kevin Turner'"}}
          | index_key_decoding_error | movr     | users | ('seattle','0002e904-1256-4528-8b5f-abad16e695ff')       | 2018-10-18 16:00:38.65916 | f        | {"error_message": "key ordering did not match datum ordering. IndexDescriptor=ASC", "index_name": "primary", "row_data": {"address": "e'81499 Samuel Crescent Suite 631\\nLake Christopherborough, PR 50401'", "city": "'seattle'", "credit_card": "'38743493725890'", "id": "'0002e904-1256-4528-8b5f-abad16e695ff'", "name": "'Mark Williams'"}}
          | index_key_decoding_error | movr     | users | ('washington dc','00007caf-2014-4696-85b0-840e7d8b6db9') | 2018-10-18 16:00:38.65916 | f        | {"error_message": "key ordering did not match datum ordering. IndexDescriptor=ASC", "index_name": "primary", "row_data": {"address": "e'4578 Holder Trafficway\\nReynoldsside, IL 23520-7418'", "city": "'washington dc'", "credit_card": "'30454993082943'", "id": "'00007caf-2014-4696-85b0-840e7d8b6db9'", "name": "'Marie Miller'"}}
(8 rows)
```

### Show range information for a specific row

The [`SHOW RANGE... FOR ROW`](/docs/v24.1/show-range-for-row) statement shows information about a [range](/docs/v24.1/architecture/overview#architecture-range) for a particular row of data. This information is useful for verifying how SQL data maps to underlying ranges, and where the replicas for a range are located.

### Alter column types

CockroachDB supports [altering the column types](/docs/v24.1/alter-table#alter-column-data-types) of existing tables, with certain limitations. To enable altering column types, set the `enable_experimental_alter_column_type_general` [session variable](/docs/v24.1/show-vars) to `true`.

### Temporary objects

[Temporary tables](/docs/v24.1/temporary-tables), [temporary views](/docs/v24.1/views#temporary-views), and [temporary sequences](/docs/v24.1/create-sequence#temporary-sequences) are in preview in CockroachDB. If you create too many temporary objects in a session, the performance of DDL operations will degrade. Dropping large numbers of temporary objects in rapid succession can also enqueue many [schema change GC jobs](/docs/v24.1/show-jobs), which may further degrade cluster performance. This performance degradation could persist long after creating the temporary objects. For more details, see [cockroachdb/cockroach#46260](https://github.com/cockroachdb/cockroach/issues/46260).

To enable temporary objects, set the `experimental_enable_temp_tables` [session variable](/docs/v24.1/show-vars) to `on`.

### Password authentication without TLS

For deployments where transport security is already handled at the infrastructure level (e.g., IPSec with DMZ), and TLS-based transport security is not possible or not desirable, CockroachDB supports delegating transport security to the infrastructure with the flag `--accept-sql-without-tls` for [`cockroach start`](/docs/v24.1/cockroach-start#security).

With this flag, SQL clients can establish a session over TCP without a TLS handshake. They still need to present valid authentication credentials, for example a password in the default configuration. Different authentication schemes can be further configured as per `server.host_based_authentication.configuration`.

Example:

```shell
$ cockroach sql --user=jpointsman --insecure
```

```text
  # Welcome to the CockroachDB SQL shell.
  # All statements must be terminated by a semicolon.
  # To exit, type: \q.
  #
  Enter password:
```

### Apache Pulsar changefeed sink

Changefeeds can deliver messages to [Apache Pulsar](https://pulsar.apache.org/docs).

A Pulsar sink URI:

```text
pulsar://localhost:6650
```

Changefeeds emitting to an Apache Pulsar sink do **not** support:

- [`format=avro`](/docs/v24.1/create-changefeed#format)
- [`confluent_schema_registry`](/docs/v24.1/create-changefeed#confluent-schema-registry)
- [`topic_prefix`](/docs/v24.1/create-changefeed#topic-prefix)
- Any batching configuration
- [Authentication query parameters](/docs/v24.1/create-changefeed#query-parameters)
- [External connections](/docs/v24.1/create-external-connection)

For an Apache Pulsar setup example, refer to the [Changefeed Examples](/docs/v24.1/changefeed-examples#create-a-changefeed-connected-to-an-apache-pulsar-sink) page.

### Core implementation of changefeeds

The [`EXPERIMENTAL CHANGEFEED FOR`](/docs/v24.1/changefeed-for) statement creates a new basic changefeed, which streams row-level changes to the client indefinitely until the underlying connection is closed or the changefeed is canceled. A basic changefeed can watch one table or multiple tables in a comma-separated list.

### Multiple active portals

The multiple active portals feature of the Postgres wire protocol (pgwire) is available, with limitations. For more information, see [Multiple active portals](/docs/v24.1/postgresql-compatibility#multiple-active-portals).

### Write Ahead Log (WAL) Failover

When a CockroachDB [node](/docs/v24.1/architecture/overview#node) is configured to run with [multiple stores](/docs/v24.1/cockroach-start#store), you can mitigate some effects of [disk stalls](/docs/v24.1/cluster-setup-troubleshooting#disk-stalls) by configuring the node to failover each store's [write-ahead log (WAL)](/docs/v24.1/architecture/storage-layer#memtable-and-write-ahead-log) to another store's data directory.

For more information, see [Write Ahead Log (WAL Failover)](/docs/v24.1/cockroach-start#write-ahead-log-wal-failover).

### Super regions

[Super regions](/docs/v24.1/multiregion-overview#super-regions) allow you to define a set of database regions such that schema objects will have all of their replicas stored *only* in regions that are members of the super region. The primary use case for super regions is data domiciling.

### Physical cluster replication data verification

You can verify data between a primary and standby cluster with the `SHOW EXPERIMENTAL FINGERPRINTS` statement, which uses the current replicated time in a [physical cluster replication](/docs/v24.1/physical-cluster-replication-overview) job to run a point-in-time fingerprint. The `SHOW EXPERIMENTAL_FINGERPRINTS` statement verifies that data transmission and ingestion is working as expected while the replication stream is running. This tool is for data verification only; if you encounter a fingerprint mismatch, contact [Support](https://support.cockroachlabs.com/hc/en-us). For more information, refer to the [Physical Cluster Replication Monitoring](/docs/v24.1/physical-cluster-replication-monitoring#data-verification) page.

### `cockroach` commands

The table below lists the [`cockroach` commands](/docs/v24.1/cockroach-commands) available in preview in CockroachDB.

<table><thead><tr><th>Command</th><th>Description</th></tr></thead><tbody><tr><td><a href="/docs/v24.1/cockroach-demo"><code>cockroach demo</code></a></td><td>Start a temporary, in-memory CockroachDB cluster, and open an interactive SQL shell to it.</td></tr><tr><td><a href="/docs/v24.1/cockroach-sqlfmt"><code>cockroach sqlfmt</code></a></td><td>Reformat SQL queries for enhanced clarity.</td></tr></tbody></table>

## See Also

- [`SHOW {session variable}`](/docs/v24.1/show-vars)
- [Functions and Operators](/docs/v24.1/functions-and-operators)
- [`ALTER TABLE... EXPERIMENTAL_AUDIT`](/docs/v24.1/alter-table#experimental_audit)
- [`SHOW TRACE FOR SESSION`](/docs/v24.1/show-trace)
- [`SHOW RANGE... FOR ROW`](/docs/v24.1/show-range-for-row)
